Get Data from a Server: get and update

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -6,4 +6,5 @@
         <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
     </div>
     <button (click)="goBack()">Go Back</button>
+    <button (click)="save()">Save</button>
 </div>
