--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -12,6 +12,7 @@
         <a routerLink="/detail/{{hero.id}}">
             <span class="badge">{{hero.id}}</span> {{hero.name}}
         </a>
+        <!-- FIXME: The button should be in the anchor but it does not delete the hero then. -->
         <button class="delete" title="delete hero" (click)="delete(hero)">X</button>
     </li>
 </ul>
